<resources>
    <string name="app_name">FaceQ</string>
    <string name="action_settings">Settings</string>
    <string name="hair">发型</string>
    <string name="haircolor">发色</string>
    <string name="face">脸型</string>
    <string name="skincolor">肤色</string>
    <string name="eyebrows">眉毛</string>
    <string name="eye">眼睛</string>
    <string name="mouse">嘴巴</string>
    <string name="feature">特征</string>
    <string name="glass">眼镜</string>
    <string name="clothes">衣服</string>
    <string name="hat">帽子</string>
    <string name="like">爱好</string>
    <string name="blackground">背景</string>
    <string name="qipao">气泡</string>
    <string name="exp">表情</string>
    <string name="nose">鼻子</string>
    <string name="bianshen">变身</string>
    <string name="body">身体</string>
    <string name="jsfun_hair">hairChange</string>
    <string name="jsfun_haircolor">hairColorChange</string>
    <string name="jsfun_face">faceChange</string>
    <string name="jsfun_skincolor">faceColorChange</string>
    <string name="jsfun_eyebrows">eyebrowChange</string>
    <string name="jsfun_eye">eyeChange</string>
    <string name="jsfun_mouse">mouthChange</string>
    <string name="jsfun_feature">featureChange</string>
    <string name="jsfun_glass">glassChange</string>
    <string name="jsfun_clothes">clothChange</string>
    <string name="jsfun_hat">hatChange</string>
    <string name="jsfun_like">hobbyChange</string>
    <string name="jsfun_blackground">backgroundChange</string>
    <string name="jsfun_qipao">bubbleChange</string>
    <string name="jsfun_qipao2">bdBubbleChange</string>
    <string name="jsfun_bianshen">bianshen</string>
    <string name="jsfun_exp">expressChange</string>
    <string name="jsfun_nose">noseChange</string>
    <string name="picture_path">Save path:</string>
    <string name="shareapp_url">http://a.app.qq.com/o/simple.jsp?pkgname=com.miantan.myoface&amp;g_f=994529</string>
    <string name="shareapp_title">FaceQ Download</string>
    <string name="shareapp_summary">No zuo No die, just try~</string>
    <string name="text_activity_loading">Loading...</string>
    <string name="text_startpage_logo">Create Your Own Cartoon Avatar</string>
    <string name="text_startpage_copyright1">COPYRIGHT BY \"</string>
    <string name="text_startpage_copyright2">\"</string>
    <string name="btn_startpage_feedback">Feedback</string>
    <string name="btnsingle_man_text">BOY</string>
    <string name="btnsingle_woman_text">GIRL</string>
    <string name="btnfun_double_text">2PLAYERS</string>
    <string name="btnfun_history_text">HISTORY</string>
    <string name="btn_edit_save">Save</string>
    <string name="btn_activity_back">Back</string>
    <string name="btn_edit_share">Share</string>
    <string name="btn_edit_settings">Settings</string>
    <string name="btn_edit_hint">Please input content</string>
    <string name="btn_edit_input">Input</string>
    <string name="btn_share_close">Close</string>
    <string name="btn_share_qqavatar">QQAvatar</string>
    <string name="btn_share_qzone">QZone</string>
    <string name="btn_share_qq">QQ</string>
    <string name="btn_share_weixin">WeChat</string>
    <string name="btn_share_pengyouquan">Moments</string>
    <string name="btn_share_sinaweibo">Weibo</string>
    <string name="btn_share_facebook">Facebook</string>
    <string name="btn_share_twitter">Twitter</string>
    <string name="btn_share_instagram">Instagram</string>
    <string name="btn_share_whatsapp">WhatsApp</string>
    <string name="btn_share_line">Line</string>
    <string name="btn_share_tumblr">Tumblr</string>
    <string name="btn_share_kakaotalk">KakaoTalk</string>
    <string name="btn_shareapp_qzone">QZone</string>
    <string name="btn_shareapp_qq">QQ</string>
    <string name="btn_shareapp_weixin">WeChat</string>
    <string name="btn_shareapp_pengyouquan">Moments</string>
    <string name="btn_settings_close">Close</string>
    <string name="btn_settings_userlearn">UserLearn</string>
    <string name="btn_settings_huanyuan">Restore</string>
    <string name="btn_settings_soundon">ON</string>
    <string name="btn_settings_soundoff">OFF</string>
    <string name="title_doublemode">2PLAYERS</string>
    <string name="title_history">HISTORY</string>
    <string name="title_joinus">JOINUS</string>
    <string name="title_aboutus">ABOUTUS</string>
    <string name="title_shareapp">Share App</string>
    <string name="title_share">Share</string>
    <string name="title_settings">Settings</string>
    <string name="text_share_sending">Sending...</string>
    <string name="text_aboutus_members">Team members</string>
    <string name="text_aboutus_contactus">Contact us</string>
    <string name="text_aboutus_mail">Email: 267406538@qq.com</string>
    <string name="text_userlearn_updown">Browse</string>
    <string name="text_userlearn_leftright">Swap</string>
    <string name="text_userlearn_done">OK</string>
    <string name="text_userlearn_point">Tap to modify</string>
    <string name="text_guidepage_start">Start</string>
    <string name="msg_net_connected_false">sorry, please make sure you are connected to internet.</string>
    <string name="msg_sdcard_false">"sorry, can't find sdcard."</string>
    <string name="msg_wx_installed_false">"sorry, you haven't installed wechat yet."</string>
    <string name="msg_instagram_installed_false">"sorry, you haven't installed instagram yet."</string>
    <string name="msg_words_limit">Sorry,it should be no more then 30 letters.</string>
    <string name="msg_lines_limit">Sorry,it should be no more then 3 lines.</string>
    <string name="msg_open_fault">⊙﹏⊙‖,Sorry, unable to open</string>
    <string name="msg_save_failure_for_share">sorry, save failed, unable to share.</string>
    <string name="msg_weibo_installed_false">"sorry, you haven't installed sina weibo yet."</string>
    <string name="msg_whatsapp_installed_false">"sorry, you haven't installed whatsapp yet."</string>
    <string name="msg_line_installed_false">"sorry, you haven't installed line yet."</string>
    <string name="msg_tumblr_installed_false">"sorry, you haven't installed tumblr yet."</string>
    <string name="msg_kakaotalk_installed_false">"sorry, you haven't installed kakaotalk yet."</string>
    <string name="dialog_colorpicker_title">Pick Color</string>
    <string name="dialog_colorpicker_ok">OK</string>
    <string name="dialog_colorpicker_cancel">Cancel</string>
    <string name="btnfun_friends_text">调戏好友</string>
    <string name="btn_friends_more">更多</string>
    <string name="btn_friendslogin">登录</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_friendslogin">调戏好友</string>
    <string name="title_friendslist">调戏好友列表</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_fb_contact_info_hint">Email, msn, gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_contact_update_at">Updated at</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_title">Feedback</string>
    <string name="umeng_fb_contact_title">Contact</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_reply_content_hint">I want to tell</string>
    <string name="umeng_fb_send">Send</string>
    <string name="umeng_fb_reply_content_default">Your precious feedback are appriciated.</string>
    <string name="umeng_fb_reply_date_default">2013-3-12 13:24:00</string>
    <string name="umeng_fb_powered_by">Powered by</string>
    <string name="umeng_fb_notification_ticker_text">Got new reply</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">New reply: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">You received %d new replies from the app developer.</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="kakao_showword">Kakao Talk</string>
    <string name="kakao_no_client">未安装Kakao Talk客户端</string>
    <string name="kakao_content">Kakao Talk只支持图片、文本分享</string>
    <string name="kakao_no_content">请设置分享内容</string>
    <string name="line_showword">LINE</string>
    <string name="line_no_client">未安装Line客户端</string>
    <string name="line_content">Line只支持文本，图片</string>
    <string name="line_no_content">请设置分享内容</string>
    <string name="pull_to_refresh_pull_label">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
</resources>