<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="clip_horizontal" android:orientation="vertical" android:id="@id/linearLayout1" android:background="@color/app_start_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_weight="2.0">
            <RelativeLayout android:orientation="horizontal" android:id="@id/relativelayout_feedback" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
                <Button android:textSize="@dimen/startpage_feedback_text_size" android:textColor="@color/startpage_feedback_text_color" android:gravity="center" android:id="@id/btnFeedBack" android:background="@drawable/bt_yijianfankui_style" android:layout_width="80.0dip" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/btn_startpage_feedback" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/relativelayout_homepage_soundswitch" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
                <ImageView android:id="@id/imageview_soundswitch" android:background="@drawable/bt_homepage_sound_on" android:layout_width="30.0dip" android:layout_height="25.0dip" android:layout_centerInParent="true" android:contentDescription="@null" />
            </RelativeLayout>
            <RelativeLayout android:orientation="horizontal" android:id="@id/relativelayout_homepage_share" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_toRightOf="@id/relativelayout_homepage_soundswitch" android:layout_alignParentTop="true">
                <ImageView android:id="@id/imageview_homepage_share" android:background="@drawable/bt_homepage_share_style" android:layout_width="30.0dip" android:layout_height="25.0dip" android:layout_centerInParent="true" android:contentDescription="@null" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:id="@id/relativelayout_startpage_logo" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_above="@id/relativelayout_startpage_select">
                <LinearLayout android:orientation="vertical" android:layout_width="180.0dip" android:layout_height="70.0dip" android:layout_centerInParent="true">
                    <ImageView android:id="@id/imageview_startpage_logo" android:background="@drawable/pic_startpage_logo_faceq" android:layout_width="180.0dip" android:layout_height="50.0dip" android:contentDescription="@null" />
                    <TextView android:textSize="@dimen/startpage_logo_text_size" android:textColor="@color/startpage_logo_text_color" android:gravity="center" android:id="@id/textview_startpage_logo" android:layout_width="180.0dip" android:layout_height="20.0dip" android:text="@string/text_startpage_logo" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/relativelayout_startpage_select" android:layout_width="fill_parent" android:layout_height="116.0dip" android:layout_alignParentBottom="true">
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="116.0dip" android:layout_weight="1.0">
                    <com.miantan.myoface.ButtonSingle android:id="@id/btnsingleMale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" />
                </RelativeLayout>
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="116.0dip" android:layout_weight="1.0">
                    <com.miantan.myoface.ButtonSingle android:id="@id/btnsingleFemale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="200.0dip" android:layout_weight="1.0">
            <RelativeLayout android:gravity="center" android:id="@id/relativelayout_startpage_double" android:layout_width="fill_parent" android:layout_height="50.0dip">
                <com.miantan.myoface.ButtonFun android:id="@id/btnfunDouble" android:layout_width="200.0dip" android:layout_height="40.0dip" android:contentDescription="@null" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:id="@id/relativelayout_startpage_history" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_below="@id/relativelayout_startpage_double">
                <com.miantan.myoface.ButtonFun android:id="@id/btnfunHistory" android:layout_width="200.0dip" android:layout_height="40.0dip" android:contentDescription="@null" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center_horizontal" android:id="@id/relativelayout_aboutus" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_above="@id/relativelayout_copyright">
                <RelativeLayout android:layout_width="120.0dip" android:layout_height="50.0dip" android:layout_centerInParent="true">
                    <ImageView android:id="@id/imgAboutUs" android:background="@drawable/pic_startpage_miantan" android:layout_width="120.0dip" android:layout_height="20.0dip" android:layout_centerInParent="true" android:contentDescription="@null" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/relativelayout_joinus" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_alignParentLeft="true">
                    <ImageView android:background="@drawable/pic_startpage_joinus" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_centerInParent="true" android:contentDescription="@null" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/relativelayout_team" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_alignParentRight="true">
                    <ImageView android:background="@drawable/pic_startpage_team" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_centerInParent="true" android:contentDescription="@null" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:id="@id/relativelayout_copyright" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="15.0dip" android:layout_alignParentBottom="true">
                <LinearLayout android:orientation="horizontal" android:id="@id/linearlayout_copyright" android:layout_width="180.0dip" android:layout_height="15.0dip">
                    <TextView android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/tvCopyright1" android:layout_width="100.0dip" android:layout_height="15.0dip" android:text="@string/text_startpage_copyright1" />
                    <ImageView android:id="@id/imgCopyright" android:background="@drawable/pic_copyright_myotee" android:layout_width="40.0dip" android:layout_height="15.0dip" android:contentDescription="@null" />
                    <TextView android:textSize="10.0sp" android:textColor="#ffffffff" android:gravity="left" android:id="@id/tvCopyright2" android:layout_width="40.0dip" android:layout_height="15.0dip" android:text="@string/text_startpage_copyright2" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>